# ai-news-aggregator

./: .dockerignore  .env.example  .gitignore  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily-digest.yml
app/: scheduler.py
app/config/: settings.py
app/email/: renderer.py  template.html
app/models/: __init__.py  database.py  models.py
app/scrapers/: __init__.py  blog.py  youtube.py
app/services/: digest.py  email.py  llm.py
app/web/: __init__.py  routes.py
app/web/static/: index.html
docker/: Dockerfile  docker-compose.yml
